# dmp

./: .gitignore  CMakeLists.txt  README  mainpage.dox  manifest.xml  package.xml  stack.xml
include/dmp/: dmp.h  fourier_approx.h  function_approx.h  linear_approx.h  radial_approx.h
launch/: dmp.launch
msg/: DMPData.msg  DMPPoint.msg  DMPTraj.msg
nodes/: dmp_server.cpp
src/: dmp.cpp  fourier_approx.cpp  linear_approx.cpp  radial_approx.cpp
srv/: GetDMPPlan.srv  LearnDMPFromDemo.srv  SetActiveDMP.srv
